# regin

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  regind.service
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml
.repo/dvalin/: notes.md
.repo/project/: profile.md
.repo/project/audit/: check-decomposition.md
.repo/project/audit/rules/: RULE-001-unit-tests-native-language.md  RULE-002-sit-uses-bats.md  RULE-003-pit-uses-podman.md  RULE-004-pit-tests-package-install.md  RULE-005-no-open-design-questions-in-feats.md  RULE-006-no-stub-implementations.md  RULE-007-feature-and-backlog-consistency.md  RULE-008-single-active-milestone.md  RULE-009-no-backlog-file.md  RULE-010-phase-entry-criteria.md  RULE-011-no-build-artifacts-in-git.md  RULE-012-documentation-coverage.md  RULE-013-commit-message-format.md  RULE-014-milestone-progression-and-uat-reconciliation.md  RULE-015-patch-milestone-planning-before-implementation.md  RULE-016-surface-ambiguity-and-conflict-as-discussions.md
.repo/project/issues/: MILESTONE-0.2.0.md  MILESTONE-0.3.0.md  MILESTONE-0.4.0.md  MILESTONE-0.5.0.md  MILESTONE-0.6.0.md  MILESTONE-0.7.0.md  MILESTONE-0.8.0.md
.repo/project/issues/discovery/: DISC-001-regin-as-itil-operations-agent.md  DISC-002-hermes-self-improving-memory.md  DISC-003-regin-as-a-dvalin-dwarf.md  DISC-004-foreman-mode-and-messaging-bus-client.md  DISC-005-role-personas-and-capabilities.md  DISC-006-regin-individual-planning-cycle.md  DISC-007-standard-skill-catalog-and-packages.md  DISC-008-machine-to-be-state-model.md  DISC-009-operator-remediation-risk-guardrail.md  DISC-010-mode-routed-escalation-and-login-greeting.md  DISC-011-itil-model-extensions.md  DISC-012-operator-skill-catalog.md  DISC-013-per-skill-scheduling-and-resilience.md  DISC-014-platform-expansion-apk-rpm.md  DISC-015-adaptive-monitoring-economics.md  DISC-016-periodic-operator-self-audit.md  DISC-017-portable-identity-memory-store.md  DISC-018-body-soul-mind-decision-modes.md  DISC-019-intent-and-planning-plane.md  DISC-020-path-to-100-percent-coverage.md
.repo/project/issues/feature/: 010-bus-client.md  011-role-persona.md  012-worker-supervisor.md  013-foreman-mode.md  014-skill-packages.md  015-escalation-bridge.md  016-meeting-chair.md  017-individual-planning.md  018-deputy-mode.md
.repo/project/skills/: logging.md  project-auditor.md  project-author.md  project-packager.md  project-reviewer.md  project-troubleshooter.md  testing.md  version.md
.repo/project/skills/convention/: layout.md  naming.md  tickets.md
.repo/project/skills/issues/: discovery.md
.repo/project/skills/language/: cpp.md  go.md  javascript.md  python.md  rust.md  shell.md
.repo/project/skills/methodology/: agent-loop.md  discovery.md  vmodel.md
.repo/project/skills/operations/: audit.md  automerging.md  deploy.md  milestone.md  retrospective.md
.repo/project/skills/operations-itil/: change.md  incident.md  monitoring-triage.md  overview.md  problem.md
.repo/project/skills/policy/: conduct.md  merging.md  testing.md  (+2 more)
.repo/regin/: notes.md
assets/: install.sh
assets/desired/: backups.md  certificates.md  disk.md  firewall.md  logs.md  memory-load.md  network.md  processes.md  security-updates.md  services.md  time-sync.md  users-auth.md
assets/filters/: examples.toml
assets/operator-skills/: backups.toml  certificates.toml  disk.toml  firewall.toml  logs.toml  memory-load.toml  network.toml  processes.toml  security-updates.toml  services.toml  time-sync.toml  users-auth.toml
assets/pam.d/: regin
assets/wiki/: Home.md
man/: regin-audit.1  regin-bus.1  regin-change.1  regin-chat.1  regin-checks.1  regin-config.1  regin-context.1  regin-deputy.1  regin-desired.1  regin-filters.1  regin-foreman.1  regin-greeting.1  regin-incident.1  regin-meeting.1  regin-memory.1  regin-metrics.1  regin-mode.1  regin-persona.1  regin-ping.1  regin-plan.1  regin-posture.1  regin-problem.1  regin-push.1  regin-runs.1  regin-skill.1  regin-task.1  regin.1  regind.1
packaging/: build.sh  nfpm.yaml
pkg/regin_0.1.0_amd64/DEBIAN/: conffiles  control  postinst  postrm  prerm
pkg/regin_0.2.0_amd64/DEBIAN/: control  postinst  prerm
regin-cli/: Cargo.toml
regin-cli/src/: main.rs  render.rs  transport.rs
regin-cli/tests/: daemon_integration.rs
regin-core/: Cargo.toml
regin-core/assets/: values.toml
regin-core/src/: approval.rs  audit.rs  bus.rs  chair.rs  config.rs  context.rs  control_loop.rs  db.rs  decision.rs  deputy.rs  desired.rs  escalation.rs  escalation_routing.rs  evaluate.rs  event_bus.rs  filters.rs  foreman.rs  goal.rs  greeting.rs  guardrail.rs  identity_db.rs  intent.rs  intent_gate.rs  kpi.rs  lib.rs  llm.rs  lsp.rs  mcp.rs  mode.rs  objective.rs  opskill.rs  permission.rs  persona.rs  planning.rs  plugin.rs  posture.rs  promotion.rs  protocol.rs  push.rs  rcpsp.rs  (+18 more)
regin-core/tests/: operator_skills_package.rs
regind/: Cargo.toml  build.rs
regind/src/: main.rs
regind/src/webui/: api.rs  artifacts.rs  auth.rs  mod.rs  pam_auth.rs  spa.rs  ws_chat.rs  ws_goal.rs  ws_terminal.rs
regind/src/webui/assets/: landing.html  spa.html
test-plugin-fixture/: Cargo.toml
test-plugin-fixture/src/: lib.rs
tests/pit/: apk-install.bats  deb-install.bats  rpm-install.bats
(+132 files in other folders)
