[workspace]
members = ["regind", "regin-cli", "regin-core", "test-plugin-fixture"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
regin-core = { path = "regin-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "6"
toml = "0.8"
futures-util = "0.3"
crossterm = "0.28"
ratatui = "0.29"
tokio-stream = "0.1"
async-trait = "0.1"
ignore = "0.4"
globset = "0.4"
regex = "1"
diffy = "0.4"
libloading = "0.8"
