[package]
name = "regin-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "regin"
path = "src/main.rs"

[dependencies]
regin-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
