[package]
name = "regin-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
httpmock = "0.8.3"
