[package]
name = "regind"
version.workspace = true
edition.workspace = true

[dependencies]
regin-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
